# simple-nlp

./: .gitignore  LICENSE  pyproject.toml  readme.md
data/: data.jsonl
data/stopwords/: cn_stopwords.txt  en_stopwords.txt
simple_nlp/: __init__.py  cli.py  main.py
simple_nlp/api/: __init__.py  models.py  routes.py
simple_nlp/config/: __init__.py  settings.py
simple_nlp/core/: __init__.py  data_loader.py  nlp_processor.py  search_engine.py  similarity_calculator.py  stopwords_manager.py
simple_nlp/models/: __init__.py  qa_data.py
simple_nlp/utils/: __init__.py  file_utils.py  text_utils.py
